2007-12-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* */Makefile.am: Ship the wscript files.

	* Makefile.am (dist-hook): Ship a copy of waf.

	* evolution/wscript (build): Fix compilation of override_common.c
	twice.

2007-12-16  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* wnck/wnck.defs:
	* wnck/wnck.override: Update up to 2.20 API.

2007-12-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Bump to version 2.21.1.
	
	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/rsvgmodule.c:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript:
	* wscript:
	Finish the WAF port.
	
	* mediaprofiles/mediaprofilesmodule.c:
	Avoid the error hiding anti-pattern.

2007-12-15  John Stowers  <john.stowers@gmail.com>

	reviewed by: Gustavo Carneiro

	* Makefile.am:
	* configure.ac:
	* evolution/Makefile.am:
	* evolution/ebookmodule.c (initebook):
	* evolution/ecalmodule.c (initecal):
	Build and install evolution bindings.

2007-12-10  John Stowers  <john.stowers@gmail.com>

	* evolution/*
	* examples/evolution/*
	Bug #501924: Add basic evolution bindings via libebook and libical

2007-12-10  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* docs/gnomeprint/wscript:
	* docs/gnomeprintui/wscript:
	* docs/gtksourceview/gtksourceview-classes.xml:
	* docs/gtksourceview/wscript:
	* docs/pygtk-ref-docs.make:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* wscript:
	Adding WAF build support; work in progress.

2007-12-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gnomekeyring/gnomekeyringmodule.c (pygnomekeyring_result_to_exception):
	Handle unknown GnomeKeyringResult codes more gracefully.
	Handle the GnomeKeyringResult code 'GNOME_KEYRING_RESULT_NO_MATCH'.

2007-11-24  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* wnck/wnck.defs: