@@ -9,6 +9,11 @@ def configure(conf):
             'gnome-keyring-1 >= 0.5.0 pygobject-2.0 ',
             destvar='GNOMEKEYRING', mandatory=False))
 
+    if conf.check_pkg('gnome-keyring-1 >= 2.20.1', destvar=None, mandatory=False):
+        conf.define('HAVE_KEYRING_2_20_1', 1)
+    else:
+        conf.undefine('HAVE_KEYRING_2_20_1')
+
 def codegen(bld, module):
     cmd = bld.create_obj('command-output')
     cmd.command = 'pygtk-codegen-2.0'
